
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {scalar_t__ (* get_src ) () ;scalar_t__ (* get_dst ) () ;scalar_t__ (* get_dstport ) () ;scalar_t__ (* get_srcport ) () ;scalar_t__ (* get_ack ) () ;scalar_t__ (* get_seq ) () ;} ;
typedef TYPE_1__ TCP ;


 scalar_t__ stub1 () ;
 scalar_t__ stub10 () ;
 scalar_t__ stub2 () ;
 scalar_t__ stub3 () ;
 scalar_t__ stub4 () ;
 scalar_t__ stub5 () ;
 scalar_t__ stub6 () ;
 scalar_t__ stub7 () ;
 scalar_t__ stub8 () ;
 scalar_t__ stub9 () ;

bool wrongPacket(TCP *p1, TCP *p2)
{
    if (p1->get_src() != p2->get_dst())
            return 1;
        if (p1->get_dst() != p2->get_src())
            return 1;
        if (p1->get_dstport() != p2->get_srcport())
            return 1;
        if (p1->get_srcport() != p2->get_dstport())
            return 1;
        if (p1->get_ack() != (p2->get_seq() + 1))
            return 1;
        return 0;
}
